# coreutils

./: Cargo.toml  deny.toml
.github/workflows/: CICD.yml  GnuTests.yml
src/uu/arch/: Cargo.toml
src/uu/base32/: Cargo.toml
src/uu/basename/: Cargo.toml
src/uu/basenc/: Cargo.toml
src/uu/cat/: Cargo.toml
src/uu/chcon/: Cargo.toml
src/uu/chgrp/: Cargo.toml
src/uu/chmod/: Cargo.toml
src/uu/chown/: Cargo.toml
src/uu/chr/: Cargo.toml
src/uu/chr/src/: chr.rs  main.rs
src/uu/chroot/: Cargo.toml
src/uu/chroot/src/: chroot.rs  error.rs
src/uu/cksum/: Cargo.toml
src/uu/comm/: Cargo.toml
src/uu/cp/: Cargo.toml
src/uu/csplit/: Cargo.toml
src/uu/cut/: Cargo.toml
src/uu/date/: Cargo.toml
src/uu/dd/: Cargo.toml
src/uu/dd/src/: dd.rs
src/uu/df/: Cargo.toml
src/uu/dir/: Cargo.toml
src/uu/dircolors/: Cargo.toml
src/uu/dirname/: Cargo.toml
src/uu/du/: Cargo.toml
src/uu/echo/: Cargo.toml
src/uu/env/: Cargo.toml
src/uu/expand/: Cargo.toml
src/uu/expr/: Cargo.toml
src/uu/factor/: Cargo.toml
src/uu/false/: Cargo.toml
src/uu/fmt/: Cargo.toml
src/uu/fold/: Cargo.toml
src/uu/groups/: Cargo.toml
src/uu/hashsum/: Cargo.toml
src/uu/head/: Cargo.toml
src/uu/head/src/: head.rs
src/uu/hostid/: Cargo.toml
src/uu/hostname/: Cargo.toml
src/uu/id/: Cargo.toml
src/uu/install/: Cargo.toml
src/uu/join/: Cargo.toml
src/uu/kill/: Cargo.toml
src/uu/link/: Cargo.toml
src/uu/ln/: Cargo.toml
src/uu/logname/: Cargo.toml
src/uu/ls/: Cargo.toml
src/uu/mkdir/: Cargo.toml
src/uu/mkfifo/: Cargo.toml
src/uu/mknod/: Cargo.toml
src/uu/mktemp/: Cargo.toml
src/uu/more/: Cargo.toml
src/uu/mv/: Cargo.toml
src/uu/nice/: Cargo.toml
src/uu/nl/: Cargo.toml
src/uu/nohup/: Cargo.toml
src/uu/nproc/: Cargo.toml
src/uu/numfmt/: Cargo.toml
src/uu/od/: Cargo.toml
src/uu/paste/: Cargo.toml
src/uu/pathchk/: Cargo.toml
src/uu/pinky/: Cargo.toml
src/uu/pr/: Cargo.toml
src/uu/printenv/: Cargo.toml
src/uu/printf/: Cargo.toml
src/uu/ptx/: Cargo.toml
src/uu/pwd/: Cargo.toml
src/uu/readlink/: Cargo.toml
src/uu/realpath/: Cargo.toml
src/uu/relpath/: Cargo.toml
src/uu/rm/: Cargo.toml
src/uu/rmdir/: Cargo.toml
src/uu/runcon/: Cargo.toml
src/uu/seq/: Cargo.toml
src/uu/shred/: Cargo.toml
src/uu/shred/src/: shred.rs
src/uu/shuf/: Cargo.toml
src/uu/sleep/: Cargo.toml
src/uu/sort/: Cargo.toml
src/uu/split/: Cargo.toml
src/uu/stat/: Cargo.toml
src/uu/stdbuf/: Cargo.toml
src/uu/stty/: Cargo.toml
src/uu/sum/: Cargo.toml
src/uu/sync/: Cargo.toml
src/uu/tac/: Cargo.toml
src/uu/tail/: Cargo.toml
src/uu/tee/: Cargo.toml
src/uu/test/: Cargo.toml
src/uu/timeout/: Cargo.toml
src/uu/touch/: Cargo.toml
src/uu/tr/: Cargo.toml
src/uu/true/: Cargo.toml
src/uu/truncate/: Cargo.toml
src/uu/tsort/: Cargo.toml
src/uu/tty/: Cargo.toml
src/uu/uname/: Cargo.toml
src/uu/unexpand/: Cargo.toml
src/uu/uniq/: Cargo.toml
src/uu/unlink/: Cargo.toml
src/uu/uptime/: Cargo.toml
src/uu/users/: Cargo.toml
src/uu/vdir/: Cargo.toml
src/uu/wc/: Cargo.toml
src/uu/who/: Cargo.toml
src/uu/whoami/: Cargo.toml
src/uu/yes/: Cargo.toml
src/uucore/: Cargo.toml
src/uucore/src/lib/: lib.rs
src/uucore/src/lib/features/: fs.rs  fsext.rs
tests/by-util/: test_chr.rs  test_cp.rs  test_mktemp.rs  test_realpath.rs  test_truncate.rs
tests/common/: util.rs
util/: android-commands.sh  build-gnu.sh
